--- a/ad-network-project.json
+++ b/ad-network-project.json
@@ -11,31 +11,22 @@
 //Unity
 
 {
- "AppID"           :  "ca-app-pub-3940256099942544~3347511713" ,
- "BannerID"        :  "ca-app-pub-3940256099942544/6300978111" ,
- "InterstitialID"  :  "ca-app-pub-3940256099942544/8691691433" ,
- "RewardID"        :  "ca-app-pub-3940256099942544/1033173712" ,
- "NativeId"        : "ca-app-pub-3940256099942544/2247696110"
+
+ "BannerID"        :  "" ,
+ "InterstitialID"  :  "" ,
+ "RewardID"        :  "" ,
+ "NativeId"        : ""
 }
 
 
 //FAN
 
 {
- "AppID"           :  "ca-app-pub-3940256099942544~3347511713" ,
- "BannerID"        :  "ca-app-pub-3940256099942544/6300978111" ,
- "InterstitialID"  :  "ca-app-pub-3940256099942544/8691691433" ,
- "RewardID"        :  "ca-app-pub-3940256099942544/1033173712" ,
- "NativeId"        : "ca-app-pub-3940256099942544/2247696110"
-}
 
+ "BannerID"        :  "" ,
+ "InterstitialID"  :  "" ,
+ "RewardID"        :  "" ,
+ "NativeId"        : ""
+}
 
 //Ironsource
-
-{
- "AppID"           :  "ca-app-pub-3940256099942544~3347511713" ,
- "BannerID"        :  "ca-app-pub-3940256099942544/6300978111" ,
- "InterstitialID"  :  "ca-app-pub-3940256099942544/8691691433" ,
- "RewardID"        :  "ca-app-pub-3940256099942544/1033173712" ,
- "NativeId"        : "ca-app-pub-3940256099942544/2247696110"
-}
